--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+body, html {
+  overflow-x: hidden;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-header {
+  display:block;
+  padding: 30px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-title {
+  display:inline-block;
+  width: 100%;
+  margin: 80px 0 0 0;
+  position:relative;
+  color:#fff;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app-title-content {
+  position:relative;
+  top:50%;
+  left: 50%;
+  width:100%;
+  text-align:center;
+  transform:translate(-50%, -50%);
 }
-
-.App-link {
-  color: #61dafb;
+.app-card-list {
+  display:inline-block;
+  width:100%;
+  float:none;
+  margin:0;
+  min-height: 75vh;
+  white-space:normal;
+  overflow-x: scroll;
+  margin-top:-70px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+    margin: 60px 30px;
+    display: inline-block;
+}
+.card-body {
+  white-space: normal;
+}
+.designer-link {
+  display:inline-block;
+  padding-top:40px;
 }
