card.js card now flips, to show the word and on click event handles showing the definition

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,8 +1,10 @@
+/*  this is for the card  */
+
 .App {
   font-family: sans-serif;
   text-align: center;
 }
-.flash-card {
+.Card {
   font-size: 24px;
   line-height: 72px;
   width: 216px;
@@ -11,5 +13,9 @@
   background-color: darkolivegreen;
   cursor: pointer;
   user-select: none;
-  
 }
+
+
+/*  this is for the button */
+
+
