--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -14,6 +14,17 @@
   cursor: pointer;
   user-select: none;
 }
+button{
+  font-size: 24px;
+  line-height: 72px;
+  width: 216px;
+  border: 1px solid orange;
+  margin: 18px;
+  background-color: grey;
+  cursor: pointer;
+  user-select: none;
+
+}
 
 
 /*  this is for the button */
